--- a/ComeX.WPF/UserControls/SurveyUserControl.xaml
+++ b/ComeX.WPF/UserControls/SurveyUserControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ComeX.WPF.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="550" d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -28,11 +28,20 @@
                 <RowDefinition x:Name="AnswersRow"></RowDefinition>
             </Grid.RowDefinitions>
             <TextBlock x:Name="ContentText" Grid.Row="0"
+                       Margin="5,5,5,5"
                    Text="{Binding Content}"/>
             <WrapPanel x:Name="AnswersWrapP" Grid.Row="1"
                    Orientation="Vertical"
                    VerticalAlignment="Top"
                    HorizontalAlignment="Left">
+                <WrapPanel.Resources>
+                    <Style TargetType="{x:Type local:SurveyAnswerUserControl}">
+                        <Setter Property="Margin" Value="5,5,5,5" />
+                    </Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Margin" Value="5,5,5,5" />
+                    </Style>
+                </WrapPanel.Resources>
             </WrapPanel>
         </Grid>
     </Border>
