--- a/ComeX.WPF/MainWindow.xaml
+++ b/ComeX.WPF/MainWindow.xaml
@@ -5,9 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:ComeX.WPF"
+        xmlns:vm="clr-namespace:ComeX.WPF.Models"
+        xmlns:uc="clr-namespace:ComeX.WPF.UserControls"
+        d:DataContext="{d:DesignInstance vm:ChatModel}"
         mc:Ignorable="d"
         Title="ComeX" Height="600" Width="800"
         MinHeight="400" MinWidth="600">
+
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -16,17 +20,13 @@
 
             <local:MinusTenConverter x:Key="MinusTenConverter" />
             <local:MinusAnotherValueConverter x:Key="MinusAnotherValueConverter" />
-            <RoutedUICommand x:Key="SendMessage"/>
         </ResourceDictionary>
     </Window.Resources>
 
-    <Window.CommandBindings>
-        <CommandBinding Command="{StaticResource SendMessage}" Executed="SendMessage"/>
-    </Window.CommandBindings>
-
-    <Window.InputBindings>
-        <KeyBinding Command="{StaticResource SendMessage}" Key="Enter"/>
-    </Window.InputBindings>
+    
+    <!--<Window.InputBindings>
+        <KeyBinding Command="{Binding SendChatMessageCommand}" Key="Enter"/>
+    </Window.InputBindings>-->
 
     <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
@@ -147,7 +147,64 @@
                     <RowDefinition Height="110"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <WrapPanel Grid.Row="0" x:Name="MessagesWrapP" Orientation="Vertical" Grid.ColumnSpan="2"></WrapPanel>
+                <ListView Grid.Row="0" Grid.ColumnSpan="2" x:Name="MessagesListView"
+                          ItemsSource="{Binding Messages}"
+                          Background="{StaticResource DarkBlue3}"
+                          BorderBrush="{x:Null}">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ListViewItem">
+                                        <ContentPresenter />
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel x:Name="MessagesWrapP" Orientation="Vertical"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Grid.Row="0" x:Name="Message">
+                                <Grid.Resources>
+                                    <Style TargetType="{x:Type TextBlock}">
+                                        <Setter Property="Grid.Column" Value="1"/>
+                                        <Setter Property="Grid.Row" Value="1"/>
+                                        <Setter Property="TextWrapping" Value="Wrap"/>
+                                        <Setter Property="Foreground" Value="{StaticResource LightBlue1}"/>
+                                    </Style>
+                                </Grid.Resources>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Name="MessageAvatarCol" Width="10"></ColumnDefinition>
+                                    <ColumnDefinition Width="*"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition x:Name="AuthorDateRow" Height="40"></RowDefinition>
+                                    <RowDefinition x:Name="ContentRow"></RowDefinition>
+                                </Grid.RowDefinitions>
+
+                                <WrapPanel x:Name="MessageNickDateWrapP" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center">
+                                    <WrapPanel.Resources>
+                                        <Style TargetType="{x:Type TextBlock}">
+                                            <Setter Property="Margin" Value="5,5,5,5" />
+                                        </Style>
+                                    </WrapPanel.Resources>
+                                    <TextBlock x:Name="AuthorText" Text="{Binding MessageAuthor}" FontSize="16" Foreground="{StaticResource LightBlue1}"/>
+                                    <TextBlock x:Name="DateText" Text="Today" FontSize="12"  Foreground="{StaticResource LightBlue1}"/>
+                                </WrapPanel>
+                                <Grid x:Name="ContentGrid" Grid.Column="1" Grid.Row="1">
+                                    <TextBlock x:Name="ContentText" Grid.Row="0"
+                   Text="{Binding MessageContent}">
+                                    </TextBlock>
+                                </Grid>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
 
                 <Grid Grid.Row="1" x:Name="TypeGrid" Margin="0,0,0,10" Grid.ColumnSpan="2">
                     <Grid.RowDefinitions>
@@ -170,7 +227,8 @@
                              Foreground ="{StaticResource LightBlue1}"
                              GotFocus="RemoveMessagePlaceholder"
                              LostFocus="AddMessagePlaceholder" FontStyle="Normal"
-                             CaretBrush="{StaticResource LightBlue1}"/>
+                             CaretBrush="{StaticResource LightBlue1}"
+                             Text="{Binding Content}"/>
 
                     <WrapPanel Grid.Row="1" x:Name="TypeToolsWrapPanel" Orientation="Horizontal" FlowDirection="RightToLeft">
                         <WrapPanel.Resources>
@@ -182,7 +240,9 @@
                                 <Setter Property="VerticalAlignment" Value="Center" />
                             </Style>
                         </WrapPanel.Resources>
-                        <Button x:Name="SendButton" Width="40" Command="{StaticResource SendMessage}" ></Button>
+                        <Button x:Name="SendButton" Width="40" Command="{Binding SendChatMessageCommand}" >
+                            
+                        </Button>
                         <Button x:Name="SurveyButton" Click="CreateSurvey"></Button>
                         <Button x:Name="PictureButton"></Button>
                     </WrapPanel>
