--- a/ComeX.WPF/Views/LoginView.xaml
+++ b/ComeX.WPF/Views/LoginView.xaml
@@ -17,8 +17,8 @@
 
     <Grid Margin="30">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.Resources>
             <Style TargetType="{x:Type Label}">
@@ -76,8 +76,8 @@
                         Content="Sign in" />
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="1">
-            <StackPanel Orientation="Horizontal" Margin="0,30,0,0">
+        <Grid Grid.Row="1" VerticalAlignment="Bottom">
+            <StackPanel Orientation="Horizontal">
                 <Label x:Name="NewUserLabel"
                    Content="New to Comex?" />
                 <Label>
