--- a/ComeX.WPF/Views/RegisterView.xaml
+++ b/ComeX.WPF/Views/RegisterView.xaml
@@ -17,8 +17,8 @@
     
     <Grid Margin="30">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.Resources>
             <Style TargetType="{x:Type Label}">
@@ -85,12 +85,14 @@
                         Content="Create account" />
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="1">
-            <StackPanel Orientation="Horizontal" Margin="0,30,0,0">
+        <Grid Grid.Row="1" VerticalAlignment="Bottom">
+            <StackPanel Orientation="Horizontal">
                 <Label x:Name="HaveAccountLabel"
                    Content="Already have an account?" />
                 <Label>
-                    <Hyperlink x:Name="LoginLink" Foreground="{StaticResource LightBlue2}">Log in</Hyperlink>
+                    <Hyperlink x:Name="LoginLink"
+                           Command="{Binding ChangeViewToLoginCommand}"
+                           Foreground="{StaticResource LightBlue2}">Log in</Hyperlink>
                 </Label>
             </StackPanel>
         </Grid>
