--- a/ComeX.WPF/Views/LoginView.xaml
+++ b/ComeX.WPF/Views/LoginView.xaml
@@ -32,14 +32,14 @@
         <Grid Grid.Row="0">
             <StackPanel>
                 <Image x:Name="LogoImage"
-                        Height="150"
-                       Margin="0,10,0,20"
+                        Height="120"
+                       Margin="0,10,0,15"
                         Source="/ExampleImages/put.jpg" />
                 <Label x:Name="UsernameLabel"
                         Content="Username" />
                 <TextBox x:Name="UsernameTextbox"
                          Template="{StaticResource BorderTextBoxTemplate}"
-                         BorderBrush="{StaticResource DarkBlue3}"
+                         BorderBrush="{Binding UsernameBoxBorder}"
                          BorderThickness="4"
                          Background="{x:Null}"
                          Foreground="{StaticResource LightBlue1}"
@@ -48,18 +48,29 @@
                          Height="30"
                          Padding="10,0,0,0"
                          Text="{Binding Username}"/>
+                <Label x:Name="UsernameErrorLabel"
+                       Margin="10,2,0,0"
+                       Foreground="Red"
+                       Visibility="{Binding UsernameErrorVisibility}"
+                       Content="{Binding UsernameError}"/>
                 <Label x:Name="PasswordLabel"
                         Content="Password" />
                 <PasswordBox x:Name="PasswordBox"
                          Template="{StaticResource BorderPasswordBoxTemplate}"
-                         BorderBrush="{StaticResource DarkBlue3}"
+                         BorderBrush="{Binding PasswordBoxBorder}"
                          BorderThickness="4"
                          Background="{x:Null}"
                          Foreground="{StaticResource LightBlue1}"
                          CaretBrush="{StaticResource LightBlue1}"
                          FontSize="16"
                          Height="30"
-                         Padding="10,0,0,0"/>
+                         Padding="10,0,0,0"
+                         PasswordChanged="OnPasswordChanged"/>
+                <Label x:Name="PasswordErrorLabel"
+                                              Margin="10,2,0,0"
+                       Foreground="Red"
+                       Visibility="{Binding PasswordErrorVisibility}"
+                       Content="{Binding PasswordError}"/>
                 <Label>
                     <Hyperlink x:Name="ForgotPasswordLink" Foreground="{StaticResource LightBlue2}">Forgot password?</Hyperlink>
                 </Label>
@@ -73,7 +84,8 @@
                         Background="{StaticResource Blue1}"
                         BorderThickness="4"
                         BorderBrush="{StaticResource DarkBlue3}"
-                        Content="Sign in" />
+                        Content="Sign in"
+                        Command="{Binding LoginCommand}"/>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1" VerticalAlignment="Bottom">
