--- a/ComeX.WPF/Views/RegisterView.xaml
+++ b/ComeX.WPF/Views/RegisterView.xaml
@@ -27,19 +27,26 @@
                 <Setter Property="Margin" Value="10,10,0,0"/>
                 <Setter Property="FontSize" Value="16"/>
             </Style>
+            <Style x:Key="ErrorLabelStyle" TargetType="{x:Type Label}">
+                <Setter Property="HorizontalAlignment" Value="Left"/>
+                <Setter Property="Foreground" Value="{StaticResource LightBlue1}"/>
+                <Setter Property="Margin" Value="10,2,0,0"/>
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Foreground" Value="Red"/>
+            </Style>
         </Grid.Resources>
 
         <Grid Grid.Row="0">
             <StackPanel>
                 <Image x:Name="LogoImage"
-                        Height="150"
-                       Margin="0,10,0,20"
+                        Height="120"
+                       Margin="0,10,0,15"
                         Source="/ExampleImages/put.jpg" />
                 <Label x:Name="UsernameLabel"
                         Content="Username" />
                 <TextBox x:Name="UsernameTextbox"
                          Template="{StaticResource BorderTextBoxTemplate}"
-                         BorderBrush="{StaticResource DarkBlue3}"
+                         BorderBrush="{Binding UsernameBoxBorder}"
                          BorderThickness="4"
                          Background="{x:Null}"
                          Foreground="{StaticResource LightBlue1}"
@@ -48,30 +55,41 @@
                          Height="30"
                          Padding="10,0,0,0"
                          Text="{Binding Username}"/>
+                <Label x:Name="UsernameErrorLabel" Style="{StaticResource ErrorLabelStyle}"
+                       Visibility="{Binding UsernameErrorVisibility}"
+                       Content="{Binding UsernameError}"/>
                 <Label x:Name="PasswordLabel"
                         Content="Password" />
                 <PasswordBox x:Name="PasswordBox"
                          Template="{StaticResource BorderPasswordBoxTemplate}"
-                         BorderBrush="{StaticResource DarkBlue3}"
+                         BorderBrush="{Binding PasswordBoxBorder}"
                          BorderThickness="4"
                          Background="{x:Null}"
                          Foreground="{StaticResource LightBlue1}"
                          CaretBrush="{StaticResource LightBlue1}"
                          FontSize="16"
                          Height="30"
-                         Padding="10,0,0,0"/>
+                         Padding="10,0,0,0"
+                         PasswordChanged="OnPasswordChanged"/>
+                <Label x:Name="PasswordErrorLabel" Style="{StaticResource ErrorLabelStyle}"
+                       Visibility="{Binding PasswordErrorVisibility}"
+                       Content="{Binding PasswordError}"/>
                 <Label x:Name="RetypePasswordLabel"
                         Content="Retype password" />
                 <PasswordBox x:Name="RetypePasswordBox"
                          Template="{StaticResource BorderPasswordBoxTemplate}"
-                         BorderBrush="{StaticResource DarkBlue3}"
+                         BorderBrush="{Binding RetypePasswordBoxBorder}"
                          BorderThickness="4"
                          Background="{x:Null}"
                          Foreground="{StaticResource LightBlue1}"
                          CaretBrush="{StaticResource LightBlue1}"
                          FontSize="16"
                          Height="30"
-                         Padding="10,0,0,0"/>
+                         Padding="10,0,0,0"
+                         PasswordChanged="OnRetypePasswordChanged"/>
+                <Label x:Name="RetypePasswordErrorLabel" Style="{StaticResource ErrorLabelStyle}"
+                       Visibility="{Binding RetypePasswordErrorVisibility}"
+                       Content="{Binding RetypePasswordError}"/>
                 <Button x:Name="LoginButton"
                         Template="{StaticResource RoundedButtonTemplate}"
                         Margin="30"
@@ -82,7 +100,8 @@
                         Background="{StaticResource Blue1}"
                         BorderThickness="4"
                         BorderBrush="{StaticResource DarkBlue3}"
-                        Content="Create account" />
+                        Content="Create account"
+                        Command="{Binding RegisterCommand}"/>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1" VerticalAlignment="Bottom">
